# quota-float

./: .gitignore  PRIVACY.md  README.md  design-qa.md  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: CODEX-UPDATE-CHECK.md  COMPUTER-SKIN-HANDOFF.md  DESIGN-PALETTE-RULES.md  GITHUB-RELEASE-CHECKLIST.md  ISSUER-LEDGER-NOTES.md  MAINTAINER-LICENSE-SIGNING.md  PROJECT-SUMMARY.md  RELEASE-NOTES-v0.2.4.md  RELEASE-READINESS-2026-07-21.md  RELEASE-READINESS-2026-07-22.md  RELEASE.md  RELEASE_TEMPLATE.md  SESSION-HANDOFF-2026-07-18.md  SUPPORTER-STATUS.md  TEST-MATRIX.md  USER-FEEDBACK-TRACKER.md
scripts/: build-feedback-tracker-20260714.mjs  build-feedback-tracker-v3.mjs  build-feedback-tracker.mjs  macos-smoke-capture.sh  verify-release-version.mjs
src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex.rs  codex_host.rs  lib.rs  license.rs  models.rs
src/components/: DesignPlayground.tsx  QuotaCard.test.tsx  QuotaCard.tsx  SupporterPanel.tsx
src/lib/: blurSkin.test.ts  blurSkin.ts  bridge.test.ts  bridge.ts  desktopPalette.test.ts  desktopPalette.ts  format.test.ts  (+4 more)
tools/license-cli/: Cargo.toml  README.md  ledger.example.csv
tools/license-cli/src/: lib.rs  main.rs
tools/maintainer-issuer/src-tauri/: Cargo.toml  tauri.conf.json
tools/maintainer-issuer/src-tauri/capabilities/: default.json
tools/maintainer-issuer/src-tauri/src/: main.rs
(+10 files in other folders)
