[package]
name = "quota-float-license-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
